fix slope and intercept

--- a/prml/R_logistic_regression_with_SGD.ipynb
+++ b/prml/R_logistic_regression_with_SGD.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -169,7 +169,7 @@
        "[1] TRUE"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -178,34 +178,34 @@
       "text/html": [
        "<table>\n",
        "<tbody>\n",
-       "\t<tr><td>-1.821942</td></tr>\n",
-       "\t<tr><td>-3.005364</td></tr>\n",
-       "\t<tr><td>2.392654</td></tr>\n",
+       "\t<tr><td>-1.664995</td></tr>\n",
+       "\t<tr><td>-3.233223</td></tr>\n",
+       "\t<tr><td>2.127222</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
        "\\begin{tabular}{l}\n",
-       "\t -1.821942\\\\\n",
-       "\t -3.005364\\\\\n",
-       "\t 2.392654\\\\\n",
+       "\t -1.664995\\\\\n",
+       "\t -3.233223\\\\\n",
+       "\t 2.127222\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
-       "1. -1.82194229700568\n",
-       "2. -3.00536432667239\n",
-       "3. 2.39265406346736\n",
+       "1. -1.66499538666894\n",
+       "2. -3.23322276525432\n",
+       "3. 2.12722215755446\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "          [,1]\n",
-       "[1,] -1.821942\n",
-       "[2,] -3.005364\n",
-       "[3,]  2.392654"
+       "[1,] -1.664995\n",
+       "[2,] -3.233223\n",
+       "[3,]  2.127222"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,8 +214,8 @@
     "w   <- matrix(c(1, 1, 1), M) # 初期化\n",
     "\n",
     "mydraw<-function(n,w){\n",
-    "  a<- -(w[1,]/w[3,])\n",
-    "  b<- -(w[2,]/w[3,])\n",
+    "  b<- -(w[1,]/w[3,])\n",
+    "  a<- -(w[2,]/w[3,])\n",
     "  p<- qplot(x=PHI[,2],y=PHI[,3],geom=\"point\",col=factor(t.li))+\n",
     "    geom_abline(slope=a,intercept=b,col=\"gray\")+\n",
     "    coord_cartesian(xlim=c(-3,3),ylim=c(-3,3))+\n",
@@ -263,84 +263,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"loop-end: 44\"\n"
+     "ename": "ERROR",
+     "evalue": "Error in update_w_IRLS(): object 'y_n' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in update_w_IRLS(): object 'y_n' not found\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Executing: \n",
-      "'convert' -loop 0 -delay 20 s1.png s2.png s3.png s4.png s5.png s6.png\n",
-      "    s7.png s8.png s9.png s10.png s11.png s12.png s13.png s14.png\n",
-      "    s15.png s16.png s17.png s18.png s19.png s20.png s21.png s22.png\n",
-      "    s23.png s24.png s25.png s26.png s27.png s28.png s29.png s30.png\n",
-      "    s31.png s32.png s33.png s34.png s35.png s36.png s37.png s38.png\n",
-      "    s39.png s40.png s41.png s42.png s43.png 'logistic_IRLS.gif'\n",
-      "Output at: logistic_IRLS.gif\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "TRUE"
-      ],
-      "text/latex": [
-       "TRUE"
-      ],
-      "text/markdown": [
-       "TRUE"
-      ],
-      "text/plain": [
-       "[1] TRUE"
-      ]
-     },
-     "execution_count": 175,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
       "text/html": [
        "<table>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row></th><td>-190.7192</td></tr>\n",
-       "\t<tr><th scope=row>Sepal.Length</th><td>-268.7957</td></tr>\n",
-       "\t<tr><th scope=row>Sepal.Width</th><td>119.491</td></tr>\n",
+       "\t<tr><td>1</td></tr>\n",
+       "\t<tr><td>1</td></tr>\n",
+       "\t<tr><td>1</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "\\begin{tabular}{r|l}\n",
-       "\t & -190.7192\\\\\n",
-       "\tSepal.Length & -268.7957\\\\\n",
-       "\tSepal.Width & 119.491\\\\\n",
+       "\\begin{tabular}{l}\n",
+       "\t 1\\\\\n",
+       "\t 1\\\\\n",
+       "\t 1\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
-       "1. -190.719191657177\n",
-       "2. -268.795705734277\n",
-       "3. 119.490992653027\n",
+       "1. 1\n",
+       "2. 1\n",
+       "3. 1\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "                  [,1]\n",
-       "             -190.7192\n",
-       "Sepal.Length -268.7957\n",
-       "Sepal.Width   119.4910"
+       "     [,1]\n",
+       "[1,]    1\n",
+       "[2,]    1\n",
+       "[3,]    1"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
