--- a/rl/qlearning_code_from_web.ipynb
+++ b/rl/qlearning_code_from_web.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -15,9 +17,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Q-Learning学習器を作って強化学習を理解したい - Self Reference Ngin\n",
+    "   - http://hasewo-gamer.hatenablog.com/entry/2017/05/21/205900"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 136,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 報酬行列\n",
@@ -95,6 +107,7 @@
    "cell_type": "code",
    "execution_count": 137,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -105,14 +118,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = pd.DataFrame(res)"
@@ -152,12 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# https://zaburo-ch.github.io/post/q-learning/"
+   ]
   },
   {
    "cell_type": "code",
@@ -185,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
