[dlfs] もろもろ追

--- a/deep-learning-from-scratch/chapter4.ipynb
+++ b/deep-learning-from-scratch/chapter4.ipynb
@@ -818,7 +818,9 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys, os\n",
@@ -1006,7 +1008,9 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y = net.predict(x)"
@@ -2211,14 +2215,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
